# touch-sonify

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: bokehPlot.html  bokehPlot.py
tests/: conftest.py  test_plots.py
tests/inputs/: diamondHeatmapDemo.csv  generate_test_csv.py  spiralDemo.csv  twoClustersDemo.csv
touch_sonify/: paths.py  plots.py
touch_sonify/code_snippets/: appFunctions.js  assignPlotRanges.js  initAppVars.js  initAudioContext.js  initializeAudio.js  initialize_audio.js  modifyFigureDimensions.js  revertPlotRanges.js  sonifyApertureOnTouchEnd.js  sonifyApertureOnTouchMove.js  sonifyApertureSingle.js  sonifyFunctions.js  sonify_aperture.js  style.css
