[tool.poetry]
name = "\u001b[z"
version = "0.1.0"
description = "Data sonification with touch as the primary interaction."
authors = ["Dennis Feng <dennisfeng2@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bokeh = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
