[tool.poetry]
name = "touch-sonify"
version = "0.1.0"
description = "Data sonification with touch as the main interaction."
authors = ["Dennis Feng <dennisfeng2@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "touch_sonify"}]

[tool.poetry.dependencies]
python = "^3.9"
bokeh = "^3.1.1"
beautifulsoup4 = "^4.12.2"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
audio-plot-lib = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
